<resources>
    <string name="app_name">TemiAnnouncer</string>

    <!-- HOME PAGE -->
    <string name="configure_icon_description">Configure Icon</string>
    <string name="task_icon_description">Task Icon</string>
    <string name="map_icon_description">Map Icon</string>
    <string name="saved_icon_description">Saved Icon</string>
    <string name="history_icon_description">History Icon</string>
    <string name="res_icon_description">Resources Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>